tests/baselines/reference/recursiveMods.errors.txt
recursiveMods.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
recursiveMods.ts(5,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== recursiveMods.ts (2 errors) ====
    export module Foo {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    	export class C {}
    }
    
    export module Foo {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
    
    	function Bar() : C {
    		if (true) { return Bar();}
    		return new C();
    	}
    
    	function Baz() : C {
    		var c = Baz();
    		return Bar();
    	}
    
    	function Gar() {
    		var c : C = Baz();
    		return;
    	}
    	
    }
    